--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Camera Access Example</title>
+  <title>Camera Access</title>
   <style>
     video {
-      width: 100%;
+      width: auto;
       height: auto;
     }
   </style>
